--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   dots_indicator: ^3.0.0
   intl: ^0.19.0
   cloud_firestore: ^4.14.0
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -76,7 +78,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Rubik
+    - family: Montserrat
       fonts:
         - asset: assets/fonts/Montserrat-Regular.ttf
           weight: 400
